2012-01-18  Niibe Yutaka  <gniibe@fsij.org>

	Clean up API between application layer and CCID layer.
	* tool/gnuk_put_binary.py, gnuk_put_binary_libusb.py: Don't append
	0x9000 at the data, any more.
	* src/usb-icc.c (icc_data_size, icc_buffer, icc_seq): Make them
	internal.
	(res_APDU_size, res_APDU_pointer): Removed.
	(icc_handle_data, USBthread): Follow new API of struct apdu.
	* src/call-rsa.c (rsa_sign, rsa_decrypt): Likewise.
	* src/openpgp.c (CLS, INS, P1, P2): New.
	(set_res_apdu, cmd_verify, cmd_change_password)
	(cmd_reset_user_password, cmd_put_data, cmd_pgp_gakp)
	(cmd_read_binary, cmd_select_file, cmd_pso)
	(cmd_internal_authenticate, cmd_update_binary, cmd_write_binary)
	(process_command_apdu, GPGthread): Follow new API of struct apdu.
	* src/openpgp-do.c (gpg_do_get_data, gpg_do_public_key): Follow
	new API of struct apdu.
	* src/gnuk.h (struct apdu, apdu): New.
	(cmd_APDU, icc_data_size, cmd_APDU_size, icc_buffer): Removed.
	(res_APDU, res_APDU_size): Use members of struct apdu.

2012-01-16  Niibe Yutaka  <gniibe@fsij.org>

	Adopt new USB API.
	* src/usb_msc.c (usb_start_transmit): Use usb_lld_write.
	(EP6_IN_Callback): Use usb_lld_tx_data_len and usb_lld_write.
	(usb_start_receive): Use usb_lld_rx_enable.
	(EP7_OUT_Callback): Use usb_lld_rx_data_len, usb_lld_rxcpy
	and usb_lld_rx_enable
	(msc_handle_command): Use usb_lld_stall_rx and usb_lld_stall_tx.

	* src/usb_lld.h (usb_lld_stall_tx, usb_lld_stall_rx)
	(usb_lld_tx_data_len): New.

	* src/main.c (STDOUTthread): Use usb_lld_write.

	* src/usb-icc.c (EP1_IN_Callback, icc_error, icc_power_on)
	(icc_send_status, icc_send_data_block, icc_send_params): Use
	usb_lld_write (was: USB_SIL_Write).
	(EP2_OUT_Callback): Use usb_lld_rx_data_len, usb_lld_rxcpy,
	and usb_lld_rx_enable (was: USB_SIL_Read and SetEPRxValid).
	(icc_prepare_receive): Use usb_lld_rx_enable.

	* src/stmusb.mk (STMUSBSRC): Dont' include usb_sil.c.

	* src/usb_lld.h (usb_lld_txcpy, usb_lld_tx_enable)